<resources>
    <string name="app_name">Counter</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="counter_zero">0</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_button">Settings</string>
    <string name="base_header">Base</string>
    <string name="base_title">Counting base</string>
    <string name="set_button">Set Value</string>
    <string name="plus_minus_size">50dp</string>
</resources>
